flask/GCP/kubernetes/service-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "notejam"
  namespace: "notejam"
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: "notejam"
    spec:
      containers:
      - name: "notejam"
        imagePullPolicy: Always
        image: "gcr.io/named-messenger-197415/notejam:master"
        ports:
          - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /signin/
            port: 5000
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /signin/
            port: 5000
          initialDelaySeconds: 3
          periodSeconds: 3
